Fix icon alignment (#3127)

--- a/pulumi-hugo/themes/default/theme/src/scss/_api-nodejs.scss
+++ b/pulumi-hugo/themes/default/theme/src/scss/_api-nodejs.scss
@@ -45,7 +45,7 @@ ul.api {
         @apply truncate mt-0;
 
         a {
-            @apply truncate bg-none inline-block p-1 max-w-full;
+            @apply truncate bg-none p-1 max-w-full inline-flex items-center;
 
             &:hover {
                 @apply underline;
